change filter for subcategory and brand